update metabse deployment